# ezrelocate

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/skills/engineering-principles/: SKILL.md
.claude/skills/fastapi-practices/: SKILL.md
.claude/skills/llm-service-practices/: SKILL.md
.claude/skills/python-practices/: SKILL.md
.claude/skills/react-practices/: SKILL.md
.github/workflows/: ci.yml  osm-pois.yml  refresh.yml
apify-actor/: .dockerignore  .gitignore  Dockerfile  README.md  golden_set.py  harness_e2e.py  live_check.py  requirements.txt  test_smoke.py
apify-actor/.actor/: actor.json  dataset_schema.json  input_schema.json
apify-actor/src/: __main__.py  _compat.py  amenities_local.py  dedup.py  enrich.py  filters.py  geocode.py  main.py  map_output.py  models.py  normalize.py  polite_client.py
apify-actor/src/data/: pois_ca.meta.json  pois_ca.npz
apify-actor/src/sources/: kijiji.py  rentfaster.py
apify-actor/tools/: build_poi_index.py  claude_map_instructions.md  listings_map.html
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/routes/: billing.py  nearby.py  query.py  stats.py
backend/app/services/: auth.py  embeddings.py  llm.py  query_log.py  quota.py  retrieval.py
backend/etl/: _common.py  _scrape.py  compute_amenity_distances.py  embed_all.py  load_osm_pois.py  load_osm_pois_geofabrik.py  scrape_kijiji.py
backend/scripts/: init_db.sh  refresh.sh
backend/tests/: conftest.py  test_auth.py  test_llm.py  test_models.py  test_retrieval.py
db/: schema.sql
db/migrations/: 001_add_pois.sql  002_auth_and_billing.sql  003_drop_neighborhoods.sql  004_query_log.sql
docs/: PROJECT_NOTES.md  rag-architecture.drawio
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: maplibre-test.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/components/: AccountBar.tsx  AuthModal.tsx  FilterChips.tsx  Icon.tsx  ListingCard.tsx  Map.tsx  Pill.tsx  QueryPanel.tsx
frontend/src/lib/: amenityIcons.ts  auth.ts  supabase.ts  types.ts
infra/: Dockerfile  com.ezrelocate.refresh.plist  docker-compose.yml
infra/init/: 01-extensions.sql
