[project]
name = "ezrelocate-backend"
version = "0.1.0"
description = "EZrelocate — Canada-wide rental recommender · Postgres + PostGIS + pgvector + Claude"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "anthropic==0.102.0",
    "voyageai==0.3.2",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "shapely==2.0.7",
    "python-dotenv==1.0.1",
    "selectolax==0.3.27",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.setuptools]
packages = ["app", "app.routes", "app.services", "etl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
