[project]
name = "ezrelocate-backend"
version = "0.1.0"
description = "EZrelocate — Canada-wide rental recommender · Postgres + PostGIS + pgvector + Claude"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "anthropic==0.102.0",
    "voyageai==0.3.2",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "shapely==2.0.7",
    "osmium==4.3.1",
    "python-dotenv==1.0.1",
    "selectolax==0.3.27",
    "python-dateutil==2.9.0.post0",
    "pyjwt[crypto]==2.10.1",
    "stripe==11.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.setuptools]
packages = ["app", "app.routes", "app.services", "etl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are meant to be evaluated once as argument
# defaults — not a B008 mutable-default-call bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# llm.py is dominated by long, deliberately-aligned LLM prompt text inside
# triple-quoted strings; a line-length cap on prose isn't useful there.
"app/services/llm.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
